2007-06-03  Per Bothner  <per@bothner.com>

	* xml.c (docbook_element_list): Map ANCHOR to "anchor".
	* node.c (cm_anchor): Handle docbook.

2007-05-22  Karl Berry  <karl@gnu.org>

	* util/gendocs_template{,_min}: missing period on source link.

2007-05-21  Karl Berry  <karl@gnu.org>

	* makeinfo/multi.c (select_output_environment): C is not Perl.

	* util/install-info.c (--test, --debug): new options,
	via new variable chicken_flag and debug_flag,
	and (minimal) implementation thereof.
	(--silent): synonym for --quiet.
	* doc/texinfo.txi (Invoking install-info): document them.

2007-05-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking install-info): document them.

2007-05-18  Norbert Preining  <preining@logic.at>

	* util/install-info.c (longopts): new options --remove-exactly,
	--section-regex.
	(main): handle them.

2007-05-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Image Syntax): findex entry should just be for
	"-", not "@-".  (Which fails due to \initial{\} in texinfo.fns,
	but that's a different story.)

2007-05-04  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (cm_anchor): ignore following whitespace,
	including newlines.  Reported by Kevin Ryde.
	* doc/texinfo.txi (anchor): state this more clearly.

	* doc/texinfo.tex (\tocreadfilename): allow override of
	\jobname.toc for sake of 2-volume printed lispref.
	(\finishentry): change test for no page number (and hence no
	leaders) again, for "Volume N" in lispref.
	(\smallbook): adjust margins to be more equal.

2007-05-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\urlcolor, \linkcolor): define both as \BrickRed
	by default.

2007-04-29  Werner Koch  <wk@g10code.com>

	* makeinfo/html.c (process_css_file): Don't omit copying the i
	of @import.  (Reported on 27 Sep 06.)
	
2007-04-29  Karl Berry  <karl@gnu.org>

	* system.h [__CYGWIN__]: #define STRIP_DOT_EXE 0 (since gunzip.exe
	may no longer exist), and PIPE_USE_FORK as 1.
	From Christopher Faylor, 28 Apr 2007 20:25:56.
